adding modal after clicking on node

--- a/ui/src/styles/ManageComponent.css
+++ b/ui/src/styles/ManageComponent.css
@@ -5,8 +5,8 @@
 }
 
 .inputForm {
-    margin-left: 15%;
-    margin-right: 15%;
-    margin-top: 10%;
-    margin-bottom: 10%;
+    margin: 10% 15%;
+}
+
+.singleTab {
 }
