--- a/ui/src/styles/HomeComponent.css
+++ b/ui/src/styles/HomeComponent.css
@@ -13,15 +13,15 @@
 }
 
 .homeGraph {
-    background-color: lightblue;
+    background-color: #e6e6e6;
     width: 55%;
-    height: 300px;
+    height: 400px;
     border-radius: 10px;
 }
 
 .homeInfo {
     margin-right: 5%;
-    background-color: lightblue;
+    background-color: #e6e6e6;
     width: 35%;
     height: 300px;
     border-radius: 10px;
@@ -29,4 +29,30 @@
 
 .homeInfoText {
     margin: 5%;
+}
+
+.popover {
+    position:absolute;
+    display:none;
+    background:#fff;
+    border: 1px solid #999;
+    padding:10px;
+    width:auto;
+    box-shadow:0 0 10px rgba(0, 0, 0, .5);
+}
+.popover:after, .popover:before {
+    right: 100%;
+    border: solid transparent;
+    content:" ";
+    height: 0;
+    width: 0;
+    position: absolute;
+    pointer-events: none;
+}
+.popover:after {
+    border-color: rgba(255, 255, 255, 0);
+    border-right-color: #ffffff;
+    border-width: 10px;
+    top: 50%;
+    margin-top: -10px;
 }
