--- a/ui/src/styles/ManageComponent.css
+++ b/ui/src/styles/ManageComponent.css
@@ -10,3 +10,22 @@
 
 .singleTab {
 }
+
+.manageButtons {
+    float: right;
+    display: inline-flex;
+}
+
+.manageButton {
+    margin-right: 2%;
+}
+
+.progressButton {
+    height: 5%;
+    width: 10%;
+    size: 10px;
+    font-size: 10px;
+    color: #1c7430;
+    text-align: center;
+    margin-left: 45%;
+}
