--- a/ui/src/styles/GrafanaComponent.css
+++ b/ui/src/styles/GrafanaComponent.css
@@ -1,10 +1,6 @@
-tabTitle {
-    text-align: center;
-    margin-top: 3%;
-    margin-bottom: 3%;
-}
-
-.grafanaLink {
-    text-align: center;
-    size: 20px;
+iframe {
+    display: block;
+    border: none;
+    width: 100%;
+    height: 88vh
 }
