--- a/ui/src/styles/ManageComponent.css
+++ b/ui/src/styles/ManageComponent.css
@@ -44,3 +44,11 @@
     margin-right: 1%;
     text-align: center;
 }
+
+.clusterAlias {
+    margin-top: 15%;
+    margin-left: 1%;
+    margin-right: 1%;
+    text-align: center;
+    display: inline;
+}
