--- a/ui/src/styles/MainPageComponent.css
+++ b/ui/src/styles/MainPageComponent.css
@@ -1,11 +1,11 @@
 
 .tabs {
-    background-color: cornflowerblue;
+    background-color: #136435;
+    margin-bottom: 0;
 }
 
 .daagerTitle {
     color: white;
-    font-size: 40px;
     text-align: center;
-    background-color: cornflowerblue;
+    background-color: #136435;
 }
