--- a/ui/src/styles/ManageComponent.css
+++ b/ui/src/styles/ManageComponent.css
@@ -18,17 +18,6 @@
     margin-right: 2%;
 }
 
-.progressButton {
-    margin-top: 2%;
-    height: 5%;
-    width: 20%;
-    size: 10px;
-    font-size: 10px;
-    color: #1c7430;
-    text-align: center;
-    margin-left: 45%;
-}
-
 .pullingDataAddressBox {
     margin: 1% 25%;
     background-color: #e6e6e6;
@@ -62,4 +51,14 @@
     border-radius: 10px;
     text-align: center;
     display: inherit;
+}
+
+
+.chooseClustersButton {
+    float:right;
+    margin-right: 5%;
+}
+
+.header {
+    display: inline;
 }
